@@ -619,10 +619,6 @@ void HarpoonBoltControl(short itemNumber)
 					auto pos = PHD_3DPOS(currentMesh->pos.Position.x, currentMesh->pos.Position.y - 128, currentMesh->pos.Position.z, 0, currentMesh->pos.Orientation.y, 0);
 					TriggerShockwave(&pos, 40, 176, 64, 0, 96, 128, 16, 0, 0);
 					ShatterObject(nullptr, currentMesh, -128, item->RoomNumber, 0);
-					SmashedMeshRoom[SmashedMeshCount] = item->RoomNumber;
-					SmashedMesh[SmashedMeshCount] = currentMesh;
-					SmashedMeshCount++;
-					currentMesh->flags &= ~StaticMeshFlags::SM_VISIBLE;
 				}
 			}
 
@@ -1007,10 +1003,6 @@ void GrenadeControl(short itemNumber)
 								auto pos = PHD_3DPOS(currentMesh->pos.Position.x, currentMesh->pos.Position.y - 128, currentMesh->pos.Position.z, 0, currentMesh->pos.Orientation.y, 0);
 								TriggerShockwave(&pos, 40, 176, 64, 0, 96, 128, 16, 0, 0);
 								ShatterObject(nullptr, currentMesh, -128, item->RoomNumber, 0);
-								SmashedMeshRoom[SmashedMeshCount] = item->RoomNumber;
-								SmashedMesh[SmashedMeshCount] = currentMesh;
-								SmashedMeshCount++;
-								currentMesh->flags &= ~StaticMeshFlags::SM_VISIBLE;
 							}
 						}
 
@@ -1317,10 +1309,6 @@ void RocketControl(short itemNumber)
 						auto pose = PHD_3DPOS(currentMesh->pos.Position.x, currentMesh->pos.Position.y - 128, currentMesh->pos.Position.z, 0, currentMesh->pos.Orientation.y, 0);
 						TriggerShockwave(&pose, 40, 176, 64, 0, 96, 128, 16, 0, 0);
 						ShatterObject(nullptr, currentMesh, -128, item->RoomNumber, 0);
-						SmashedMeshRoom[SmashedMeshCount] = item->RoomNumber;
-						SmashedMesh[SmashedMeshCount] = currentMesh;
-						SmashedMeshCount++;
-						currentMesh->flags &= ~StaticMeshFlags::SM_VISIBLE;
 					}
 				}
 
@@ -1599,13 +1587,7 @@ void CrossbowBoltControl(short itemNumber)
 				{
 					currentMesh->HitPoints -= Weapons[(int)LaraWeaponType::Crossbow].Damage;
 					if (currentMesh->HitPoints <= 0)
-					{
 						ShatterObject(nullptr, currentMesh, -128, item->RoomNumber, 0);
-						SmashedMeshRoom[SmashedMeshCount] = item->RoomNumber;
-						SmashedMesh[SmashedMeshCount] = currentMesh;
-						SmashedMeshCount++;
-						currentMesh->flags &= ~StaticMeshFlags::SM_VISIBLE;
-					}
 				}
 
 				k++;
