@@ -1832,10 +1832,6 @@ void DoObjectCollision(ItemInfo* laraItem, CollisionInfo* coll)
 			{
 				SoundEffect(GetShatterSound(mesh->staticNumber), (PHD_3DPOS*)mesh);
 				ShatterObject(nullptr, mesh, -128, laraItem->RoomNumber, 0);
-				SmashedMeshRoom[SmashedMeshCount] = laraItem->RoomNumber;
-				SmashedMesh[SmashedMeshCount] = mesh;
-				SmashedMeshCount++;
-				mesh->flags &= ~StaticMeshFlags::SM_VISIBLE;
 			}
 			else if (coll->Setup.EnableObjectPush)
 				ItemPushStatic(laraItem, mesh, coll);
