@@ -595,7 +595,6 @@ namespace TEN::Entities::TR5
 									ShatterObject(0, mesh, -64, LaraItem->RoomNumber, 0);
 									SoundEffect(GetShatterSound(mesh->staticNumber), (PHD_3DPOS*)mesh);
 
-									mesh->flags &= ~StaticMeshFlags::SM_VISIBLE;
 									floor->Stopper = false;
 
 									TestTriggers(pos.x, pos.y, pos.z, item->RoomNumber, true);
