@@ -787,6 +787,7 @@ void ReadRooms()
 			mesh.HitPoints = ReadInt16();
 			mesh.luaName = ReadString();
 
+			mesh.roomNumber = i;
 			g_GameScriptEntities->AddName(mesh.luaName, mesh);
 		}
 
@@ -995,17 +996,17 @@ void LoadEventSets()
 
 		eventSet.OnEnter.Mode = (VolumeEventMode)ReadInt32();
 		eventSet.OnEnter.Function = ReadString();
-		eventSet.OnEnter.Argument = ReadString();
+		eventSet.OnEnter.Data = ReadString();
 		eventSet.OnEnter.CallCounter = ReadInt32();
 
 		eventSet.OnInside.Mode = (VolumeEventMode)ReadInt32();
 		eventSet.OnInside.Function = ReadString();
-		eventSet.OnInside.Argument = ReadString();
+		eventSet.OnInside.Data = ReadString();
 		eventSet.OnInside.CallCounter = ReadInt32();
 
 		eventSet.OnLeave.Mode = (VolumeEventMode)ReadInt32();
 		eventSet.OnLeave.Function = ReadString();
-		eventSet.OnLeave.Argument = ReadString();
+		eventSet.OnLeave.Data = ReadString();
 		eventSet.OnLeave.CallCounter = ReadInt32();
 
 		g_Level.EventSets.push_back(eventSet);
@@ -1321,11 +1322,11 @@ void LoadSprites()
 		spr->y4 = ReadFloat();
 	}
 
-	g_Level.NumSpritesSequences = ReadInt32();
+	int numSequences = ReadInt32();
 
-	TENLog("Num sprite sequences: " + std::to_string(g_Level.NumSpritesSequences), LogLevel::Info);
+	TENLog("Num sprite sequences: " + std::to_string(numSequences), LogLevel::Info);
 
-	for (int i = 0; i < g_Level.NumSpritesSequences; i++)
+	for (int i = 0; i < numSequences; i++)
 	{
 		int spriteID = ReadInt32();
 		short negLength = ReadInt16();
