@@ -1,6 +1,7 @@
 Version 1.0.2
 =============
 
+* Support volume triggers made with node editor.
 * Adjust max turn rate of idle state.
 * Align Lara on slopes when crouching, crawling, and dying.
 * Better slope alignment for large, flat enemies (i.e. big scorpion and crocodile).
